[gd_scene load_steps=7 format=2]

[ext_resource path="res://platform_metroidvania asset pack v1.01/miscellaneous sprites/wooden_plate.png" type="Texture" id=1]
[ext_resource path="res://Decorations/Sign/Sign.gd" type="Script" id=2]
[ext_resource path="res://platform_metroidvania asset pack v1.01/Sign Panel.png" type="Texture" id=3]
[ext_resource path="res://Fonts/MatchupPro.ttf" type="DynamicFontData" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 12.0416

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 4 )

[node name="Sign" type="Sprite"]
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="Node2D" type="Node2D" parent="."]
z_index = 1

[node name="NinePatchRect" type="NinePatchRect" parent="Node2D"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -232.0
margin_top = -119.0
margin_right = -133.0
margin_bottom = -81.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource( 3 )
patch_margin_left = 6
patch_margin_top = 4
patch_margin_right = 6
patch_margin_bottom = 4
axis_stretch_horizontal = 2
axis_stretch_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="Label" parent="Node2D/NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_right = 32.0
margin_bottom = 14.0
rect_scale = Vector2( 0.7, 0.7 )
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_player_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_player_exited"]
